--- a/index.html
+++ b/index.html
@@ -1,10 +1,27 @@
 <!DOCTYPE html>
 <html lang="uz-UZ">
+
 <head>
 	<meta charset="UTF-8">
-	<title>Music | asakew</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Music | asakew / Mobile version</title>
+	<link rel="stylesheet" href="css/main.css">
 </head>
+
 <body>
-	
+	<header>
+		<div class="topnav">
+  <a class="active" href="#home">Home</a>
+  <a href="#about">About</a>
+  <a href="#contact">Contact</a>
+  <div class="search-container">
+    <form action="https://www.w3schools.com/action_page.php">
+      <input type="text" placeholder="Search.." name="search">
+      <button type="submit">Submit</button>
+    </form>
+  </div>
+</div>
+
+	</header>
 </body>
 </html>
